# orc-viewer

./: README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: export_csv.rs  mod.rs  orc_reader.rs
