[package]
name = "orc-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orc_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
orc-rust = {git = "https://github.com/awol2005ex/orc-rust.git", branch = "awol2005ex-br-csv-show-nested-struct-type-2025-01-07"}
arrow = { git = "https://github.com/awol2005ex/arrow-rs.git",package="arrow", branch = "awol2005ex-br-csv-show-nested-struct-type-2025-01-07", features = ["prettyprint", "chrono-tz", "struct_display_json"] }
chrono ="0.4"
tauri-plugin-dialog = "2"

[profile.release]
strip = true
lto = true
opt-level = 'z'
